crates/franken-engine/tests/snapshots/lowering_pipeline__arithmetic_expression.snap
---
source: crates/franken-engine/src/lowering_pipeline.rs
assertion_line: 45404
expression: actual_json
---
{
  "ir1": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir1",
      "source_hash": [
        6,
        98,
        152,
        75,
        133,
        68,
        114,
        104,
        79,
        223,
        75,
        155,
        133,
        215,
        108,
        16,
        181,
        166,
        131,
        151,
        37,
        171,
        43,
        230,
        195,
        249,
        36,
        198,
        46,
        160,
        104,
        250
      ],
      "source_label": "arithmetic.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": []
      }
    ],
    "ops": [
      {
        "LoadLiteral": {
          "value": {
            "Integer": 42
          }
        }
      },
      {
        "LoadLiteral": {
          "value": {
            "Integer": 7
          }
        }
      },
      {
        "BinaryOp": {
          "operator": "Add"
        }
      },
      "Pop",
      "Return"
    ]
  },
  "ir2": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir2",
      "source_hash": [
        62,
        125,
        120,
        120,
        253,
        24,
        49,
        121,
        134,
        71,
        212,
        199,
        150,
        103,
        178,
        231,
        72,
        177,
        33,
        241,
        229,
        166,
        210,
        35,
        186,
        5,
        44,
        112,
        129,
        161,
        42,
        188
      ],
      "source_label": "arithmetic.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": []
      }
    ],
    "ops": [
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 42
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 7
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "BinaryOp": {
            "operator": "Add"
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Return",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      }
    ],
    "required_capabilities": []
  },
  "ir3": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir3",
      "source_hash": [
        188,
        83,
        200,
        225,
        25,
        1,
        10,
        91,
        243,
        73,
        206,
        119,
        36,
        221,
        15,
        160,
        200,
        57,
        166,
        149,
        48,
        31,
        84,
        132,
        236,
        182,
        229,
        51,
        163,
        208,
        226,
        0
      ],
      "source_label": "arithmetic.js"
    },
    "instructions": [
      {
        "LoadInt": {
          "dst": 1,
          "value": 42
        }
      },
      {
        "LoadInt": {
          "dst": 2,
          "value": 7
        }
      },
      {
        "Add": {
          "dst": 1,
          "lhs": 1,
          "rhs": 2
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 1
        }
      },
      {
        "Return": {
          "value": 0
        }
      },
      "Halt"
    ],
    "constant_pool": [],
    "function_table": [
      {
        "entry": 0,
        "arity": 0,
        "frame_size": 3,
        "name": "main",
        "is_generator": false
      }
    ],
    "specialization": null,
    "required_capabilities": []
  },
  "ir2_flow_proof_artifact": {
    "schema_version": "frankenengine.ir2_flow_proof_witness.v1",
    "artifact_id": "sha256:804342c7b2e77dc32182ba6e643c05f02e9c142612bcd0cabbcc6a06b50bb18f",
    "trace_id": "golden_test_arithmetic_expression",
    "decision_id": "decision_arithmetic_expression",
    "policy_id": "policy_arithmetic_expression",
    "module_id": "arithmetic.js",
    "proved_flows": [],
    "denied_flows": [],
    "required_declassifications": [],
    "runtime_checkpoints": []
  },
  "witnesses": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:0662984b854472684fdf4b9b85d76c10b5a6839725ab2be6c3f924c62ea068fa",
      "output_hash": "sha256:3e7d7878fd1831798647d4c79667b2e748b121f1e5a6d223ba052c7081a12abc",
      "rollback_token": "sha256:0662984b854472684fdf4b9b85d76c10b5a6839725ab2be6c3f924c62ea068fa",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR1 source_hash references IR0 hash"
        },
        {
          "name": "scope_binding_ids_unique",
          "passed": true,
          "detail": "All scope binding IDs are unique"
        }
      ]
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:3e7d7878fd1831798647d4c79667b2e748b121f1e5a6d223ba052c7081a12abc",
      "output_hash": "sha256:bc53c8e119010a5bf349ce7724dd0fa0c839a695301f5484ecb6e533a3d0e200",
      "rollback_token": "sha256:3e7d7878fd1831798647d4c79667b2e748b121f1e5a6d223ba052c7081a12abc",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR2 source_hash references IR1 hash"
        },
        {
          "name": "hostcall_capability_required",
          "passed": true,
          "detail": "Hostcall effects always carry capability tags"
        },
        {
          "name": "ir2_flow_metrics_consistent",
          "passed": true,
          "detail": "flow_ops=0 static_proven=0 runtime_checks=0"
        },
        {
          "name": "ir2_static_flow_coverage_ratio",
          "passed": true,
          "detail": "static_coverage_millionths=0 static_proven=0 total_flow_ops=0"
        }
      ]
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:bc53c8e119010a5bf349ce7724dd0fa0c839a695301f5484ecb6e533a3d0e200",
      "output_hash": "sha256:d55339bfae848e876fe086c7be84e1c75cdff26c2e8957b05c42ea50301f73b5",
      "rollback_token": "sha256:bc53c8e119010a5bf349ce7724dd0fa0c839a695301f5484ecb6e533a3d0e200",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR3 source_hash references IR2 hash"
        },
        {
          "name": "function_table_present",
          "passed": true,
          "detail": "IR3 function table contains a deterministic main entry"
        },
        {
          "name": "terminal_halt_instruction",
          "passed": true,
          "detail": "IR3 instruction stream ends with HALT"
        },
        {
          "name": "resolved_control_flow_targets",
          "passed": true,
          "detail": "IR3 jump targets resolve to concrete instruction indices"
        }
      ]
    }
  ],
  "isomorphism_ledger": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:0662984b854472684fdf4b9b85d76c10b5a6839725ab2be6c3f924c62ea068fa",
      "output_hash": "sha256:3e7d7878fd1831798647d4c79667b2e748b121f1e5a6d223ba052c7081a12abc",
      "input_op_count": 1,
      "output_op_count": 5
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:3e7d7878fd1831798647d4c79667b2e748b121f1e5a6d223ba052c7081a12abc",
      "output_hash": "sha256:bc53c8e119010a5bf349ce7724dd0fa0c839a695301f5484ecb6e533a3d0e200",
      "input_op_count": 5,
      "output_op_count": 5
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:bc53c8e119010a5bf349ce7724dd0fa0c839a695301f5484ecb6e533a3d0e200",
      "output_hash": "sha256:d55339bfae848e876fe086c7be84e1c75cdff26c2e8957b05c42ea50301f73b5",
      "input_op_count": 5,
      "output_op_count": 6
    }
  ],
  "events": [
    {
      "trace_id": "golden_test_arithmetic_expression",
      "decision_id": "decision_arithmetic_expression",
      "policy_id": "policy_arithmetic_expression",
      "component": "lowering_pipeline",
      "event": "ir0_to_ir1_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_arithmetic_expression",
      "decision_id": "decision_arithmetic_expression",
      "policy_id": "policy_arithmetic_expression",
      "component": "lowering_pipeline",
      "event": "ir1_to_ir2_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_arithmetic_expression",
      "decision_id": "decision_arithmetic_expression",
      "policy_id": "policy_arithmetic_expression",
      "component": "lowering_pipeline",
      "event": "ir2_flow_check_completed",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_arithmetic_expression",
      "decision_id": "decision_arithmetic_expression",
      "policy_id": "policy_arithmetic_expression",
      "component": "lowering_pipeline",
      "event": "ir2_to_ir3_lowered",
      "outcome": "pass",
      "error_code": null
    }
  ]
}
