crates/franken-engine/tests/snapshots/lowering_pipeline__for_loop_statement.snap
---
source: crates/franken-engine/src/lowering_pipeline.rs
expression: actual_json
---
{
  "ir1": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir1",
      "source_hash": [
        125,
        140,
        216,
        199,
        231,
        134,
        177,
        74,
        71,
        221,
        21,
        147,
        87,
        166,
        188,
        179,
        11,
        160,
        208,
        237,
        17,
        184,
        242,
        60,
        47,
        95,
        43,
        61,
        13,
        101,
        50,
        32
      ],
      "source_label": "loop.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": [
          {
            "name": "i",
            "binding_id": 0,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Let"
          }
        ]
      }
    ],
    "ops": [
      {
        "LoadLiteral": {
          "value": {
            "Integer": 0
          }
        }
      },
      {
        "StoreBinding": {
          "binding_id": 0
        }
      },
      "Discard",
      {
        "CreatePerIterationBinding": {
          "binding_id": 0,
          "kind": "Let",
          "preserve_state": true
        }
      },
      {
        "Label": {
          "id": 0
        }
      },
      {
        "LoadBinding": {
          "binding_id": 0
        }
      },
      {
        "LoadLiteral": {
          "value": {
            "Integer": 5
          }
        }
      },
      {
        "BinaryOp": {
          "operator": "LessThan"
        }
      },
      {
        "JumpIfFalsy": {
          "label_id": 2
        }
      },
      "Pop",
      {
        "LoadName": {
          "name": "log",
          "allow_missing": false
        }
      },
      {
        "LoadBinding": {
          "binding_id": 0
        }
      },
      {
        "Call": {
          "arg_count": 1
        }
      },
      "Pop",
      {
        "Label": {
          "id": 1
        }
      },
      {
        "CreatePerIterationBinding": {
          "binding_id": 0,
          "kind": "Let",
          "preserve_state": true
        }
      },
      {
        "LoadLiteral": {
          "value": {
            "Integer": 1
          }
        }
      },
      {
        "AssignOp": {
          "binding_id": 0,
          "operator": "AddAssign"
        }
      },
      "Pop",
      {
        "Jump": {
          "label_id": 0
        }
      },
      {
        "Label": {
          "id": 2
        }
      },
      "Return"
    ]
  },
  "ir2": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir2",
      "source_hash": [
        148,
        55,
        16,
        110,
        57,
        225,
        93,
        9,
        52,
        161,
        158,
        84,
        244,
        100,
        65,
        185,
        48,
        117,
        161,
        199,
        231,
        221,
        163,
        167,
        45,
        233,
        245,
        199,
        154,
        60,
        173,
        198
      ],
      "source_label": "loop.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": [
          {
            "name": "i",
            "binding_id": 0,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Let"
          }
        ]
      }
    ],
    "ops": [
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 0
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "StoreBinding": {
            "binding_id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Discard",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "CreatePerIterationBinding": {
            "binding_id": 0,
            "kind": "Let",
            "preserve_state": true
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Label": {
            "id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadBinding": {
            "binding_id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 5
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "BinaryOp": {
            "operator": "LessThan"
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "JumpIfFalsy": {
            "label_id": 2
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadName": {
            "name": "log",
            "allow_missing": false
          }
        },
        "effect": "ReadEffect",
        "required_capability": null,
        "flow": {
          "data_label": "Internal",
          "sink_clearance": "Internal",
          "declassification_required": false
        }
      },
      {
        "inner": {
          "LoadBinding": {
            "binding_id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Call": {
            "arg_count": 1
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Label": {
            "id": 1
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "CreatePerIterationBinding": {
            "binding_id": 0,
            "kind": "Let",
            "preserve_state": true
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "LoadLiteral": {
            "value": {
              "Integer": 1
            }
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "AssignOp": {
            "binding_id": 0,
            "operator": "AddAssign"
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Jump": {
            "label_id": 0
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": {
          "Label": {
            "id": 2
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Return",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      }
    ],
    "required_capabilities": []
  },
  "ir3": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir3",
      "source_hash": [
        248,
        3,
        169,
        138,
        92,
        29,
        253,
        204,
        206,
        190,
        143,
        211,
        39,
        195,
        98,
        43,
        117,
        238,
        244,
        243,
        3,
        200,
        93,
        178,
        159,
        59,
        51,
        186,
        178,
        1,
        213,
        141
      ],
      "source_label": "loop.js"
    },
    "instructions": [
      {
        "LoadInt": {
          "dst": 2,
          "value": 0
        }
      },
      {
        "Move": {
          "dst": 1,
          "src": 2
        }
      },
      {
        "Move": {
          "dst": 2,
          "src": 1
        }
      },
      {
        "LoadInt": {
          "dst": 3,
          "value": 5
        }
      },
      {
        "Lt": {
          "dst": 2,
          "lhs": 2,
          "rhs": 3
        }
      },
      {
        "JumpIf": {
          "cond": 2,
          "target": 7
        }
      },
      {
        "Jump": {
          "target": 17
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 2
        }
      },
      {
        "LoadName": {
          "dst": 2,
          "name_pool_index": 0,
          "allow_missing": false
        }
      },
      {
        "Move": {
          "dst": 3,
          "src": 1
        }
      },
      {
        "Move": {
          "dst": 4,
          "src": 3
        }
      },
      {
        "Call": {
          "callee": 2,
          "args": {
            "start": 4,
            "count": 1
          },
          "dst": 5
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 5
        }
      },
      {
        "LoadInt": {
          "dst": 2,
          "value": 1
        }
      },
      {
        "Add": {
          "dst": 1,
          "lhs": 1,
          "rhs": 2
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 1
        }
      },
      {
        "Jump": {
          "target": 2
        }
      },
      {
        "Return": {
          "value": 0
        }
      },
      "Halt"
    ],
    "constant_pool": [
      "log"
    ],
    "function_table": [
      {
        "entry": 0,
        "arity": 0,
        "frame_size": 6,
        "name": "main",
        "is_generator": false
      }
    ],
    "specialization": null,
    "required_capabilities": []
  },
  "ir2_flow_proof_artifact": {
    "schema_version": "frankenengine.ir2_flow_proof_witness.v1",
    "artifact_id": "sha256:dce189572552c9a03a228480b13812f76cf4362690c67e9e843ac6614646785b",
    "trace_id": "golden_test_for_loop_statement",
    "decision_id": "decision_for_loop_statement",
    "policy_id": "policy_for_loop_statement",
    "module_id": "loop.js",
    "proved_flows": [
      {
        "op_index": 10,
        "source_label": "Internal",
        "sink_clearance": "Internal",
        "capability": null,
        "proof_method": "StaticAnalysis"
      }
    ],
    "denied_flows": [],
    "required_declassifications": [],
    "runtime_checkpoints": []
  },
  "witnesses": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:7d8cd8c7e786b14a47dd159357a6bcb30ba0d0ed11b8f23c2f5f2b3d0d653220",
      "output_hash": "sha256:9437106e39e15d0934a19e54f46441b93075a1c7e7dda3a72de9f5c79a3cadc6",
      "rollback_token": "sha256:7d8cd8c7e786b14a47dd159357a6bcb30ba0d0ed11b8f23c2f5f2b3d0d653220",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR1 source_hash references IR0 hash"
        },
        {
          "name": "scope_binding_ids_unique",
          "passed": true,
          "detail": "All scope binding IDs are unique"
        }
      ]
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:9437106e39e15d0934a19e54f46441b93075a1c7e7dda3a72de9f5c79a3cadc6",
      "output_hash": "sha256:f803a98a5c1dfdcccebe8fd327c3622b75eef4f303c85db29f3b33bab201d58d",
      "rollback_token": "sha256:9437106e39e15d0934a19e54f46441b93075a1c7e7dda3a72de9f5c79a3cadc6",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR2 source_hash references IR1 hash"
        },
        {
          "name": "hostcall_capability_required",
          "passed": true,
          "detail": "Hostcall effects always carry capability tags"
        },
        {
          "name": "ir2_flow_metrics_consistent",
          "passed": true,
          "detail": "flow_ops=1 static_proven=1 runtime_checks=0"
        },
        {
          "name": "ir2_static_flow_coverage_ratio",
          "passed": true,
          "detail": "static_coverage_millionths=1000000 static_proven=1 total_flow_ops=1"
        }
      ]
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:f803a98a5c1dfdcccebe8fd327c3622b75eef4f303c85db29f3b33bab201d58d",
      "output_hash": "sha256:b4e6f1bb33c8b8208dc417c4cbc312f0a84cc06659368cf365e57648a732a2e0",
      "rollback_token": "sha256:f803a98a5c1dfdcccebe8fd327c3622b75eef4f303c85db29f3b33bab201d58d",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR3 source_hash references IR2 hash"
        },
        {
          "name": "function_table_present",
          "passed": true,
          "detail": "IR3 function table contains a deterministic main entry"
        },
        {
          "name": "terminal_halt_instruction",
          "passed": true,
          "detail": "IR3 instruction stream ends with HALT"
        },
        {
          "name": "resolved_control_flow_targets",
          "passed": true,
          "detail": "IR3 jump targets resolve to concrete instruction indices"
        }
      ]
    }
  ],
  "isomorphism_ledger": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:7d8cd8c7e786b14a47dd159357a6bcb30ba0d0ed11b8f23c2f5f2b3d0d653220",
      "output_hash": "sha256:9437106e39e15d0934a19e54f46441b93075a1c7e7dda3a72de9f5c79a3cadc6",
      "input_op_count": 1,
      "output_op_count": 22
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:9437106e39e15d0934a19e54f46441b93075a1c7e7dda3a72de9f5c79a3cadc6",
      "output_hash": "sha256:f803a98a5c1dfdcccebe8fd327c3622b75eef4f303c85db29f3b33bab201d58d",
      "input_op_count": 22,
      "output_op_count": 22
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:f803a98a5c1dfdcccebe8fd327c3622b75eef4f303c85db29f3b33bab201d58d",
      "output_hash": "sha256:b4e6f1bb33c8b8208dc417c4cbc312f0a84cc06659368cf365e57648a732a2e0",
      "input_op_count": 22,
      "output_op_count": 19
    }
  ],
  "events": [
    {
      "trace_id": "golden_test_for_loop_statement",
      "decision_id": "decision_for_loop_statement",
      "policy_id": "policy_for_loop_statement",
      "component": "lowering_pipeline",
      "event": "ir0_to_ir1_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_for_loop_statement",
      "decision_id": "decision_for_loop_statement",
      "policy_id": "policy_for_loop_statement",
      "component": "lowering_pipeline",
      "event": "ir1_to_ir2_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_for_loop_statement",
      "decision_id": "decision_for_loop_statement",
      "policy_id": "policy_for_loop_statement",
      "component": "lowering_pipeline",
      "event": "ir2_flow_check_completed",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_for_loop_statement",
      "decision_id": "decision_for_loop_statement",
      "policy_id": "policy_for_loop_statement",
      "component": "lowering_pipeline",
      "event": "ir2_to_ir3_lowered",
      "outcome": "pass",
      "error_code": null
    }
  ]
}
