crates/franken-engine/tests/snapshots/lowering_pipeline__function_declaration.snap
---
source: crates/franken-engine/src/lowering_pipeline.rs
expression: actual_json
---
{
  "ir1": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir1",
      "source_hash": [
        55,
        163,
        184,
        30,
        54,
        19,
        106,
        197,
        71,
        72,
        218,
        27,
        37,
        51,
        87,
        246,
        49,
        65,
        143,
        30,
        115,
        152,
        75,
        88,
        83,
        18,
        13,
        102,
        192,
        79,
        134,
        15
      ],
      "source_label": "function.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": [
          {
            "name": "add",
            "binding_id": 0,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Var"
          }
        ]
      }
    ],
    "ops": [
      {
        "DeclareFunction": {
          "name": "add",
          "binding_id": 0,
          "param_names": [
            "a",
            "b"
          ],
          "body_ops": [
            {
              "LoadBinding": {
                "binding_id": 0
              }
            },
            {
              "LoadBinding": {
                "binding_id": 1
              }
            },
            {
              "BinaryOp": {
                "operator": "Add"
              }
            },
            "Return"
          ],
          "free_vars": [],
          "free_var_ids": [],
          "is_generator": false,
          "is_async": false,
          "rest_param_index": null
        }
      },
      "Pop",
      "Return"
    ]
  },
  "ir2": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir2",
      "source_hash": [
        218,
        247,
        252,
        243,
        31,
        171,
        24,
        190,
        163,
        253,
        9,
        13,
        179,
        153,
        225,
        51,
        47,
        205,
        126,
        223,
        35,
        230,
        136,
        188,
        239,
        115,
        113,
        223,
        153,
        20,
        198,
        183
      ],
      "source_label": "function.js"
    },
    "scopes": [
      {
        "scope_id": {
          "depth": 0,
          "index": 0
        },
        "parent": null,
        "kind": "Global",
        "bindings": [
          {
            "name": "add",
            "binding_id": 0,
            "scope": {
              "depth": 0,
              "index": 0
            },
            "kind": "Var"
          }
        ]
      }
    ],
    "ops": [
      {
        "inner": {
          "DeclareFunction": {
            "name": "add",
            "binding_id": 0,
            "param_names": [
              "a",
              "b"
            ],
            "body_ops": [
              {
                "LoadBinding": {
                  "binding_id": 0
                }
              },
              {
                "LoadBinding": {
                  "binding_id": 1
                }
              },
              {
                "BinaryOp": {
                  "operator": "Add"
                }
              },
              "Return"
            ],
            "free_vars": [],
            "free_var_ids": [],
            "is_generator": false,
            "is_async": false,
            "rest_param_index": null
          }
        },
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Pop",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      },
      {
        "inner": "Return",
        "effect": "Pure",
        "required_capability": null,
        "flow": null
      }
    ],
    "required_capabilities": []
  },
  "ir3": {
    "header": {
      "schema_version": {
        "major": 0,
        "minor": 14,
        "patch": 0
      },
      "level": "Ir3",
      "source_hash": [
        11,
        212,
        45,
        247,
        214,
        148,
        246,
        206,
        250,
        193,
        96,
        35,
        82,
        83,
        217,
        30,
        9,
        139,
        224,
        69,
        163,
        49,
        173,
        0,
        180,
        221,
        249,
        197,
        210,
        248,
        233,
        74
      ],
      "source_label": "function.js"
    },
    "instructions": [
      {
        "CreateClosure": {
          "dst": 1,
          "function_index": 1,
          "capture_count": 0
        }
      },
      {
        "Move": {
          "dst": 0,
          "src": 1
        }
      },
      {
        "Return": {
          "value": 0
        }
      },
      "Halt",
      {
        "Move": {
          "dst": 2,
          "src": 0
        }
      },
      {
        "Move": {
          "dst": 3,
          "src": 1
        }
      },
      {
        "Add": {
          "dst": 2,
          "lhs": 2,
          "rhs": 3
        }
      },
      {
        "Return": {
          "value": 2
        }
      }
    ],
    "constant_pool": [],
    "function_table": [
      {
        "entry": 0,
        "arity": 0,
        "frame_size": 2,
        "name": "main",
        "is_generator": false
      },
      {
        "entry": 4,
        "arity": 2,
        "frame_size": 4,
        "name": "add",
        "is_generator": false
      }
    ],
    "specialization": null,
    "required_capabilities": []
  },
  "ir2_flow_proof_artifact": {
    "schema_version": "frankenengine.ir2_flow_proof_witness.v1",
    "artifact_id": "sha256:200d4d058178c71f1e2140380fa3a5cf017ffc90e7c2b413faa9045177d22320",
    "trace_id": "golden_test_function_declaration",
    "decision_id": "decision_function_declaration",
    "policy_id": "policy_function_declaration",
    "module_id": "function.js",
    "proved_flows": [],
    "denied_flows": [],
    "required_declassifications": [],
    "runtime_checkpoints": []
  },
  "witnesses": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:37a3b81e36136ac54748da1b253357f631418f1e73984b5853120d66c04f860f",
      "output_hash": "sha256:daf7fcf31fab18bea3fd090db399e1332fcd7edf23e688bcef7371df9914c6b7",
      "rollback_token": "sha256:37a3b81e36136ac54748da1b253357f631418f1e73984b5853120d66c04f860f",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR1 source_hash references IR0 hash"
        },
        {
          "name": "scope_binding_ids_unique",
          "passed": true,
          "detail": "All scope binding IDs are unique"
        }
      ]
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:daf7fcf31fab18bea3fd090db399e1332fcd7edf23e688bcef7371df9914c6b7",
      "output_hash": "sha256:0bd42df7d694f6cefac160235253d91e098be045a331ad00b4ddf9c5d2f8e94a",
      "rollback_token": "sha256:daf7fcf31fab18bea3fd090db399e1332fcd7edf23e688bcef7371df9914c6b7",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR2 source_hash references IR1 hash"
        },
        {
          "name": "hostcall_capability_required",
          "passed": true,
          "detail": "Hostcall effects always carry capability tags"
        },
        {
          "name": "ir2_flow_metrics_consistent",
          "passed": true,
          "detail": "flow_ops=0 static_proven=0 runtime_checks=0"
        },
        {
          "name": "ir2_static_flow_coverage_ratio",
          "passed": true,
          "detail": "static_coverage_millionths=0 static_proven=0 total_flow_ops=0"
        }
      ]
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:0bd42df7d694f6cefac160235253d91e098be045a331ad00b4ddf9c5d2f8e94a",
      "output_hash": "sha256:4579ef02b8a0fbd5a4faf272856593f138ba36a40568e6d64da470b7e63aab82",
      "rollback_token": "sha256:0bd42df7d694f6cefac160235253d91e098be045a331ad00b4ddf9c5d2f8e94a",
      "invariant_checks": [
        {
          "name": "source_hash_linkage",
          "passed": true,
          "detail": "IR3 source_hash references IR2 hash"
        },
        {
          "name": "function_table_present",
          "passed": true,
          "detail": "IR3 function table contains a deterministic main entry"
        },
        {
          "name": "terminal_halt_instruction",
          "passed": true,
          "detail": "IR3 instruction stream ends with HALT"
        },
        {
          "name": "resolved_control_flow_targets",
          "passed": true,
          "detail": "IR3 jump targets resolve to concrete instruction indices"
        }
      ]
    }
  ],
  "isomorphism_ledger": [
    {
      "pass_id": "ir0_to_ir1",
      "input_hash": "sha256:37a3b81e36136ac54748da1b253357f631418f1e73984b5853120d66c04f860f",
      "output_hash": "sha256:daf7fcf31fab18bea3fd090db399e1332fcd7edf23e688bcef7371df9914c6b7",
      "input_op_count": 1,
      "output_op_count": 3
    },
    {
      "pass_id": "ir1_to_ir2",
      "input_hash": "sha256:daf7fcf31fab18bea3fd090db399e1332fcd7edf23e688bcef7371df9914c6b7",
      "output_hash": "sha256:0bd42df7d694f6cefac160235253d91e098be045a331ad00b4ddf9c5d2f8e94a",
      "input_op_count": 3,
      "output_op_count": 3
    },
    {
      "pass_id": "ir2_to_ir3",
      "input_hash": "sha256:0bd42df7d694f6cefac160235253d91e098be045a331ad00b4ddf9c5d2f8e94a",
      "output_hash": "sha256:4579ef02b8a0fbd5a4faf272856593f138ba36a40568e6d64da470b7e63aab82",
      "input_op_count": 3,
      "output_op_count": 8
    }
  ],
  "events": [
    {
      "trace_id": "golden_test_function_declaration",
      "decision_id": "decision_function_declaration",
      "policy_id": "policy_function_declaration",
      "component": "lowering_pipeline",
      "event": "ir0_to_ir1_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_function_declaration",
      "decision_id": "decision_function_declaration",
      "policy_id": "policy_function_declaration",
      "component": "lowering_pipeline",
      "event": "ir1_to_ir2_lowered",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_function_declaration",
      "decision_id": "decision_function_declaration",
      "policy_id": "policy_function_declaration",
      "component": "lowering_pipeline",
      "event": "ir2_flow_check_completed",
      "outcome": "pass",
      "error_code": null
    },
    {
      "trace_id": "golden_test_function_declaration",
      "decision_id": "decision_function_declaration",
      "policy_id": "policy_function_declaration",
      "component": "lowering_pipeline",
      "event": "ir2_to_ir3_lowered",
      "outcome": "pass",
      "error_code": null
    }
  ]
}
